--- a/settings.gradle
+++ b/settings.gradle
@@ -55,7 +55,9 @@ project(':android-components').projectDir = new File("${gradle.mozconfig.topsrcd
 
 if (!gradle.mozconfig.substs.MOZ_ANDROID_SUBPROJECT || gradle.mozconfig.substs.MOZ_ANDROID_SUBPROJECT == "fenix") {
     include ':fenix'
+    include ':fenix:sample-feature'
     project(':fenix').projectDir = new File("${gradle.mozconfig.topsrcdir}/mobile/android/fenix/app")
+    project(':fenix:sample-feature').projectDir = new File("${gradle.mozconfig.topsrcdir}/mobile/android/fenix/app/samplefeature")
 }
 if (!gradle.mozconfig.substs.MOZ_ANDROID_SUBPROJECT || gradle.mozconfig.substs.MOZ_ANDROID_SUBPROJECT == "focus") {
     include ':focus-android'
