--- a/mobile/android/fenix/settings.gradle
+++ b/mobile/android/fenix/settings.gradle
@@ -44,7 +44,7 @@ apply from: file('../shared-settings.gradle')
 apply from: file('../autopublish-settings.gradle')
 
 include ':app'
-include ':app:samplefeature'
+include ':app:sample-feature'
 include ':mozilla-detekt-rules'
 include ':benchmark'
 
